Installed Google Analytics and configured initial routing

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,2 +1,9 @@
-%h1 Pages#home
-%p Find me in app/views/pages/home.html.haml
+%h1 
+	Welcome to the live official website of the
+	%h2 Gladney Family Reunion 2011 
+
+%p{"style" => "width: 550px"}
+	Stay tuned as this website will eventually contain some valuable information concerning the reunion.  
+	Please be patient during the construction of this site. Thanks! 
+	%br 
+	%cite{"style" => "display: block"}  - Antwan Foster (Feb 27, 2011)
