--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,14 +1,19 @@
 !!! 5
 %html
 	%head
+	
+		%meta{'http-equiv' => "content-type", :content => "text/html;charset=UTF-8"}/
 		%meta{'name' => 'keywords', :content => 'Gladney Family Reunion June 2011 Bruce Mississippi Bud Alice Gladney'}/
 		%meta{'name' => 'description', :content => 'The Gladney Family Reunion 2011'}/
 		= csrf_meta_tag
 		
-		%title	Gladney Family Reunion | Official Website
+		~ "\n"
 		
-		= stylesheet_link_tag :all
+		%title Gladney Family Reunion 2011 | Official Website
+		
+		= render :partial => 'shared/google_analytics' if Rails.env == "production"
 		= javascript_include_tag :defaults
+		= stylesheet_link_tag :all
 		
 	%body
 		= yield
