--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,10 +11,10 @@
 		
 		%title Gladney Family Reunion 2011 | Official Website
 		
-		= render :partial => 'shared/google_analytics' if Rails.env == "production"
+		= javascript_include_tag 'google_analytics' if Rails.env == "production"
 		= javascript_include_tag :defaults
 		= stylesheet_link_tag :all
-		
+				
 	%body
 		= yield
 
