Added the reunion graphic for the home/landing page

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,9 +1,1 @@
-%h1 
-	Welcome to the live official website of the
-	%h2 Gladney Family Reunion 2011 
-
-%p{"style" => "width: 550px"}
-	Stay tuned as this website will eventually contain some valuable information concerning the reunion.  
-	Please be patient during the construction of this site. Thanks! 
-	%br 
-	%cite{"style" => "display: block"}  - Antwan Foster (Feb 27, 2011)
+= image_tag("gladney-reunion-bg.jpg", :size => "798x563", :alt => 'Gladney Family Reunion 2011', :id => 'flyer')
