Revised flyer logo

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,1 +1,1 @@
-= image_tag("gladney-reunion-bg.jpg", :size => "798x563", :alt => 'Gladney Family Reunion 2011', :id => 'flyer')
+= image_tag("gladney-reunion-bg-v3.jpg", :size => "798x723", :alt => 'Gladney Family Reunion 2011', :id => 'flyer')
