Revised graphic to version 5

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,1 +1,1 @@
-= image_tag("gladney-reunion-bg-v3.jpg", :size => "798x723", :alt => 'Gladney Family Reunion 2011', :id => 'flyer')
+#flyer= image_tag("gladney-reunion-bg-v5.jpg", :size => "804x728", :alt => 'Gladney Family Reunion 2011')
