--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,1 +1,38 @@
-#flyer= image_tag("gladney-reunion-bg-v5.jpg", :size => "804x728", :alt => 'Gladney Family Reunion 2011')
+
+%section#registration.column.span-6
+	
+	%a{:href => "#", :class => "gray-box"}
+		= image_tag("pencil.png", :size => "148x149", :alt => 'Registration')
+		%h2 Registration
+		
+	%article#blurb
+		%p 
+			Register Now! The registration deadline for this year’s reunion is on May 14th 2011.
+			This will help the planning committee with other logistics used to put together the event.
+			You will also be alble to order your Reunion T-shirt during the registration process.
+			Hope to see you soon!
+
+%section#hotel.column.span-6
+	%a{:href => "#", :class => "gray-box"}
+		= image_tag("hotel.png", :size => "128x128", :alt => 'Hotel Options')
+		%h2 Hotel Options
+		
+	%article#blurb
+		%p 
+			Book your hotel.  There are several recommended hotel options for the reunion.   
+			Also the reunion has a limited time discount and limited number of rooms offered from 
+			the Hampton Inn & Holiday Inn located in Oxford, MS (approx 30mins) from Bruce, MS.  
+			View the Hotel Options for more links and contact info on other hotels.
+
+%section#schedule.column.span-6.last
+	%a{:href => "#", :class => "gray-box"}
+		= image_tag("schedule.png", :size => "128x128", :alt => 'Schedule')
+		%h2 Event Schedule
+	
+	%article#blurb
+		%p 
+			Events and Locations.  Review the agenda for the reunion. This outlines the times as 
+			well as the locations of the events for each day.  The addresses for each of the locations 
+			are posted here also.
+	
+	
