Added Email Confirmation

--- a/app/views/registrants/_confirm_form.html.haml
+++ b/app/views/registrants/_confirm_form.html.haml
@@ -20,4 +20,4 @@
 	= registrant_form.hidden_field :init_confirmed	
 		
 	.actions
-		= registrant_form.submit 'Confirm'
+		= registrant_form.submit 'Confirm & Register'
