--- a/app/views/registrants/confirm.html.haml
+++ b/app/views/registrants/confirm.html.haml
@@ -1,5 +1,5 @@
 %h2.bottom Registration Confirmation
-%h4.bottom Please confirm the info and the pricing below
+%h4.bottom Please verify &amp; confirm the info and pricing below
 
 %section#confirmation.span-18
 	%article#personal.column.span-7
