--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,7 @@
 		%title Gladney Family Reunion 2011 | Official Website
 		
 		= javascript_include_tag 'google_analytics' if Rails.env == "production"
-		= javascript_include_tag :defaults, "nested_form", "jquery.lightbox-0.5"
+		= javascript_include_tag :defaults, "nested_form", "jquery.lightbox-0.5.min"
 		
 		:javascript
 			$(function() {
