removed the flash notice and alert from homepage since home is a static page

--- a/app/views/registrants/confirm.html.haml
+++ b/app/views/registrants/confirm.html.haml
@@ -1,3 +1,5 @@
+= "<p class='notice'>#{notice}</p>".html_safe if notice
+
 %h2.bottom Registration Confirmation
 %h4.bottom Please verify &amp; confirm the info and pricing below
 
