Correct place where successful registration notice should go

--- a/app/views/registrants/show.html.haml
+++ b/app/views/registrants/show.html.haml
@@ -1,3 +1,5 @@
+= "<p class='notice'>#{notice}</p>".html_safe if notice
+
 %h2 Registration Confirmation
 = link_to_function("Print Confirmation", "javascript:print()", {:id => 'print', :class => 'right'})
 
