--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,16 +14,21 @@
 		
 		= javascript_include_tag 'google_analytics' if Rails.env == "production"
 		= javascript_include_tag :defaults, "nested_form", "jquery.lightbox-0.5.min"
-		
 		:javascript
-			$(function() {
-				$('#gallery a').lightBox();
-			});
+			$(function() {$('#gallery a').lightBox();});
 		
 		= stylesheet_link_tag 'screen', 'jquery.lightbox-0.5', :media => "screen, projection"
 		= stylesheet_link_tag 'print', :media => "print"
-		/[if lt IE 8]
-			= stylesheet_link_tag 'print', :media => "ie.css"
+		
+		/[if lte IE 8]			
+			:javascript
+				document.createElement('header');
+				document.createElement('nav');
+				document.createElement('section');
+				document.createElement('article');
+				document.createElement('aside');
+				document.createElement('footer');
+		
 				
 	%body#gladney-reunion
 	
