Added YouTube link to routes in order to add to homepage and also email confirmation message

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -85,9 +85,10 @@
 			%footer#subfooter
 				%section.container
 					%section#social-media.span-6.right.last
-						%h2 Follow Us
-						%h3 on Facebook
-						= link_to 'Facebook Link', facebook_url, {:id => 'facebook', :target => 'blank'}
+						%h2 Follow Our
+						%h3 Social Media
+						= link_to 'Facebook Link', facebook_url, {:id => 'facebook', :title => 'Facebook', :target => 'blank'}
+						= link_to 'YouTube Link', youtube_url, {:id => 'youtube', :title => 'You Tube', :target => 'blank'}
 			%footer#copyright
 				%section.container
 					%p.span-6 Copyright &copy; 2011  GladneyFamilyReunion.org
