--- a/app/views/notifier/confirm_registration.text.html.haml
+++ b/app/views/notifier/confirm_registration.text.html.haml
@@ -22,6 +22,8 @@
 					The reunion website will eventually feature a photo gallery that will be added to the site after the family reunion.  Don't forget to visit
 					our facebook page by going to 
 					= url_for("http://www.gladneyfamilyreunion.org/facebook")
+					and also YouTube 
+					= url_for("http://www.gladneyfamilyreunion.org/youtube")
 				%p 
 					For future reference, your payment details are below.  Please remember to send your payment as soon as possible 
 					to the trustee you selected during the registration process.  This will help the committees with on-going logistical 
