Changed phone number for Sawmill Hotel

--- a/app/views/pages/hotel.html.haml
+++ b/app/views/pages/hotel.html.haml
@@ -9,18 +9,18 @@
 			%p.bottom.strong Holiday Inn Express
 			%p.bottom 112 Heritage Dr., 
 			%p.bottom Oxford, MS  38655
-			%p.bottom Contact: (662) 236-2500
+			%p.bottom Phone: (662) 236-2500
 			%p Reference:  Gladney Family Reunion Discount Rate.  (Rooms are limited)
 		%li	
 			%p.bottom.strong Cart Barn Inn @ Yoda Creek 
 			%p.bottom 74 County Rd. 259 (sam Nation)
 			%p.bottom Bruce, MS 38915
-			%p Contact: (800) 997-5149
+			%p Phone: (800) 997-5149
 		%li 
 			%p.bottom.strong Sawmill Motel
 			%p.bottom (Located on Hwy-9)
 			%p.bottom Bruce, MS 38915
-			%p.bottom Contact:  Joy @ (662) 983-7199
+			%p.bottom Phone: (662) 983-7317
 			%p Reference:  Gladney Family Reunion Discount Rate.	
 
 
