Modified SawMill Motel contact and address info

--- a/app/views/pages/hotel.html.haml
+++ b/app/views/pages/hotel.html.haml
@@ -17,10 +17,10 @@
 			%p.bottom Bruce, MS 38915
 			%p Phone: (800) 997-5149
 		%li 
-			%p.bottom.strong Sawmill Motel
-			%p.bottom (Located on Hwy-9)
+			%p.bottom.strong Sawmill Motel &amp; Restaurant
+			%p.bottom 314 W Calhoun St.
 			%p.bottom Bruce, MS 38915
-			%p.bottom Phone: (662) 983-7317
+			%p.bottom Phone: (662) 983-9500
 			%p Reference:  Gladney Family Reunion Discount Rate.	
 
 
